{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 23,
  "lineage": "67443bfa-c3c1-a5ac-8ea0-4be5fb354724",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:internet-gateway/igw-0297ca4175d0590f0",
            "id": "igw-0297ca4175d0590f0",
            "owner_id": "862605034458",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0b8ecd9aab2d1ab3d"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:route-table/rtb-06528e1e33561de0d",
            "id": "rtb-06528e1e33561de0d",
            "owner_id": "862605034458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0297ca4175d0590f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ecd9aab2d1ab3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2f1dce42be0ce2c",
            "route_table_id": "rtb-06528e1e33561de0d",
            "subnet_id": "subnet-0a58314f103b3a687"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e1d840ad0cc12f9",
            "route_table_id": "rtb-06528e1e33561de0d",
            "subnet_id": "subnet-09a5d790c391c894a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-1b",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-0b2a2b8d83ff9b9f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2a2b8d83ff9b9f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0b8ecd9aab2d1ab3d"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-02dba928de8af4ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dba928de8af4ff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0b8ecd9aab2d1ab3d"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-0a58314f103b3a687",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a58314f103b3a687",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0b8ecd9aab2d1ab3d"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-09a5d790c391c894a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a5d790c391c894a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0b8ecd9aab2d1ab3d"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workshop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:vpc/vpc-0b8ecd9aab2d1ab3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2b0ea773c0c3d47",
            "default_route_table_id": "rtb-0800f216c16bc161e",
            "default_security_group_id": "sg-050ef60e0846701f8",
            "dhcp_options_id": "dopt-039d5cdacd575ac4a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b8ecd9aab2d1ab3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0800f216c16bc161e",
            "owner_id": "862605034458",
            "tags": {
              "Cluster": "training",
              "Name": "group-3"
            },
            "tags_all": {
              "Cluster": "training",
              "Name": "group-3"
            }
          }
        }
      ]
    }
  ]
}